--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <br><br><br>
-        <h1 class = "center">Good Evening!</h1>
+        <h1 class = "center">Good Evening! Hi</h1>
         <br><br>
         <p class = "center">We are extremely excited to have everyone join us tonight for the Finance Society Fall 2020 Opening Social.
         On this site, you will find the virtual event links for tonight's opening social. Each box is embedded with a link to a Zoom meeting room.
