change navbar to midd of page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-md bg-dark fixed-top navbar-dark">
+
+
+        <div class="jumbotron rounded-0">
+          <img class = "hero-center w3-container w3-center w3-animate-opacity" src="images/FS_Opening_Logo.png" alt="opening social logo">
+          <br>
+          <h1 class = "centertext">···</h1>
+          <p class="lead centertext">
+              <a class="gradient-button gradient-button-1" href="https://byu.joinhandshake.com/events/559347?ref=events-search" role="button">Register</a>
+              <a class="gradient-button gradient-button-3" href="links.html" role="button">Virtual Event</a>
+          </p>
+        </div>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark container">
           <a class="navbar-brand font-light" href="#">THUR · SEPTEMBER 10, 2020</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -42,36 +53,30 @@
                     <a class="dropdown-item" href="#">7:00 - 7:10 · Opening Ceremony</a>
                     <a class="dropdown-item" href="#">7:10 - 7:50 · Meet with Goldman Sachs</a>
                     <a class="dropdown-item" href="#">7:50 - 8:25 · Meet with sub-club presidencies</a>
-                    <a class="dropdown-item" href="#">8:25 - 8:30 · Closing Ceremony with Rafﬂe</a>
+                    <a class="dropdown-item" href="#">8:25 - 8:30 · Closing Ceremony with Raffle</a>
                 </div>
               </li>
             </ul>
           </div>
         </nav>
 
-        <div class="jumbotron rounded-0">
-          <img class = "hero-center w3-container w3-center w3-animate-opacity" src="images/FS_Opening_Logo.png" alt="opening social logo">
-          <br>
-          <h1 class = "centertext">···</h1>
-          <p class="lead centertext">
-              <a class="gradient-button gradient-button-1" href="https://byu.joinhandshake.com/events/559347?ref=events-search" role="button">Register</a>
-              <a class="gradient-button gradient-button-3" href="links.html" role="button">Virtual Event</a>
-          </p>
+        <br><br><br>
+
+        <div class="container">
+            <h1>Good Evening!</h1>
+            <br><br>
+            <p>We are extremely excited to have everyone join us tonight for the Finance Society Fall 2020 Opening Social.
+            On this site, you will find the virtual event links for tonight's opening social. Each box is embedded with a link to a Zoom meeting room.
+        The event will begin at 7:00 P.M. and we'll start on the Main Stage. This is where the Opening Ceremony and Closing Ceremonies will be. Around 7:10 P.M.,
+        you will have the opportunity to network with Goldman Sachs professionals from the Salt Lake City office. Later in the evening, you will be able to meet
+        with the presidencies of the Finance Society's subclubs. This is a great time to ask questions and choose your track for finance.
+        The dress code for tonight's event is formal. We are looking forward to seeing everyone!</p><br>
+        <p>Cheers!</p>
+        <p><emphasize>Hailee and Janelle</emphasize></p>
+        <p>Finance Society Co-Presidents</p>
+        <br><br><br><br>
         </div>
 
-        <br><br><br>
-        <h1 class = "center">Good Evening! Hi</h1>
-        <br><br>
-        <p class = "center">We are extremely excited to have everyone join us tonight for the Finance Society Fall 2020 Opening Social.
-        On this site, you will find the virtual event links for tonight's opening social. Each box is embedded with a link to a Zoom meeting room.
-    The event will begin at 7:00 P.M. and we'll start on the Main Stage. This is where the Opening Ceremony and Closing Ceremonies will be. Around 7:10 P.M.,
-    you will have the opportunity to network with Goldman Sachs professionals from the Salt Lake City office. Later in the evening, you will be able to meet
-    with the presidencies of the Finance Society's subclubs. This is a great time to ask questions and choose your track for finance.
-    The dress code for tonight's event is formal. We are looking forward to seeing everyone!</p><br>
-    <p class ="center">Cheers!</p>
-    <p class ="center"><emphasize>Hailee and Janelle</emphasize></p>
-    <p class ="center">Finance Society Co-Presidents</p>
-    <br><br><br><br>
 
 
         <div class="footer">
