--- a/links.html
+++ b/links.html
@@ -19,36 +19,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-md bg-dark fixed-top navbar-dark">
-        <a class="navbar-brand font-light" href="#">THUR · SEPTEMBER 10, 2020</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="presidency.html">Meet the Presidency</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Virtual Event</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Tonight's Schedule
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">7:00 - 7:10 · Opening Ceremony</a>
-                        <a class="dropdown-item" href="#">7:10 - 7:50 · Meet with Goldman Sachs</a>
-                        <a class="dropdown-item" href="#">7:50 - 8:25 · Meet with sub-club presidencies</a>
-                        <a class="dropdown-item" href="#">8:25 - 8:30 · Closing Ceremony with Rafﬂe</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
+
 
     <div class="jumbotron rounded-0">
         <img class="hero-center w3-container w3-center w3-animate-opacity" src="images/FS_Opening_Logo.png" alt="opening social logo">
@@ -60,6 +31,37 @@
         </p>
     </div>
 
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark container">
+    <a class="navbar-brand font-light" href="#">THUR · SEPTEMBER 10, 2020</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="presidency.html">Meet the Presidency</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Virtual Event</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Tonight's Schedule
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">7:00 - 7:10 · Opening Ceremony</a>
+                    <a class="dropdown-item" href="#">7:10 - 7:50 · Meet with Goldman Sachs</a>
+                    <a class="dropdown-item" href="#">7:50 - 8:25 · Meet with sub-club presidencies</a>
+                <a class="dropdown-item" href="#">8:25 - 8:30 · Closing Ceremony with Raffle</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 
 
     <br><br><br>
@@ -68,7 +70,7 @@
 
     <h2 class="center">7:00 - 7:10 · Opening Ceremony</h2><br>
     <div class="container">
-        <a href="https://byu.zoom.us/j/8015028217"><img src="images/Clubs/main.PNG"</a>
+        <a href="https://byu.zoom.us/j/8015028217"><img src="images/Clubs/main.png"</a>
     </div><br><br>
     <h2 class="center">7:10 - 7:50 · Meet with Goldman Sachs</h2><br>
 
@@ -153,7 +155,7 @@
     <br><br>
     <h2 class="center">8:25 - 8:30 · Return to Main Stage for Closing Ceremony and Prize Raffle</h2><br>
     <div class="container">
-        <a href="https://byu.zoom.us/j/8015028217"><img src="images/Clubs/main.PNG"</a>
+        <a href="https://byu.zoom.us/j/8015028217"><img src="images/Clubs/main.png"</a>
     </div><br><br>
     <br><br>
 
