--- a/presidency.html
+++ b/presidency.html
@@ -18,7 +18,19 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-md bg-dark fixed-top navbar-dark">
+
+
+        <div class="jumbotron rounded-0">
+          <img class = "hero-center w3-container w3-center w3-animate-opacity" src="images/FS_Opening_Logo.png" alt="opening social logo">
+          <br>
+          <h1 class = "centertext">···</h1>
+          <p class="lead centertext">
+              <a class="gradient-button gradient-button-1" href="https://byu.joinhandshake.com/events/559347?ref=events-search" role="button">Register</a>
+              <a class="gradient-button gradient-button-3" href="links.html" role="button">Virtual Event</a>
+          </p>
+        </div>
+
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark container">
           <a class="navbar-brand font-light" href="#">THUR · SEPTEMBER 10, 2020</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -42,24 +54,12 @@
                     <a class="dropdown-item" href="#">7:00 - 7:10 · Opening Ceremony</a>
                     <a class="dropdown-item" href="#">7:10 - 7:50 · Meet with Goldman Sachs</a>
                     <a class="dropdown-item" href="#">7:50 - 8:25 · Meet with sub-club presidencies</a>
-                    <a class="dropdown-item" href="#">8:25 - 8:30 · Closing Ceremony with Rafﬂe</a>
+                    <a class="dropdown-item" href="#">8:25 - 8:30 · Closing Ceremony with Raffle</a>
                 </div>
               </li>
             </ul>
           </div>
         </nav>
-
-        <div class="jumbotron rounded-0">
-          <img class = "hero-center w3-container w3-center w3-animate-opacity" src="images/FS_Opening_Logo.png" alt="opening social logo">
-          <br>
-          <h1 class = "centertext">···</h1>
-          <p class="lead centertext">
-              <a class="gradient-button gradient-button-1" href="https://byu.joinhandshake.com/events/559347?ref=events-search" role="button">Register</a>
-              <a class="gradient-button gradient-button-3" href="links.html" role="button">Virtual Event</a>
-          </p>
-        </div>
-
-
 
         <br><br><br>
         <h1 class = "center">What is the Finance Society?</h1>
@@ -85,7 +85,7 @@ Finance Society is the engine behind the preparation, professional development, 
             Most Recent Work Experience: Goldman Sachs <br>
             Track of Finance: Investing (Credit Risk)</li>
         <li class="list-group-item">
-            <img src="images/tommy.jpg" alt="" class = "profile"><br><br>
+            <img src="images/tommy.JPG" alt="" class = "profile"><br><br>
             Tommy Morgan, Vice President of Treasury
             Class of 2022 <br>
             Most Recent Work Experience: Sorenson Capital <br>
