fixed initial commit and change navbar back

--- a/about.html
+++ b/about.html
@@ -16,9 +16,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <body>
-
-
 
         <div class="jumbotron rounded-0">
           <img class = "hero-center w3-container w3-center w3-animate-opacity" src="images/FS_Opening_Logo.png" alt="opening social logo">
@@ -41,14 +38,15 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Meet the Presidency</a>
+                <a class="nav-link" href="presidency.html">Meet the Presidency</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Finance Society</a>
+                <a class="nav-link" href="#">About Finance Society</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="links.html">Virtual Event</a>
               </li>
+
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Tonight's Schedule
@@ -65,41 +63,20 @@
         </nav>
 
         <br><br>
+
+        <body>
+
         <div class="container">
-        <h1>Meet the 2020-2021 Finance Society Presidency</h1><br>
 
-        <p>As we transition into the new school year, we'd like you to get to know the names and faces of those within the Finance Society presidency so that you may reach out to us as needed. For those who are new, the Finance Society is an umbrella organization that oversees nine subclubs. Your membership gives you access to all of these subclubs and their resources. Each subclub will have their own presidency and you will have an opportunity to get to know subclub presidents through weekly Instagram features that will start back up again in two weeks. There are also opportunities to meet all cub presidents virtually this Wednesday at Marriott Night and this Thursday at our Fall Opening Social.
-</p>
-    <ul>
-        <li class="list-group-item">
-            <img src="images/hailee.jpg" alt="" class = "profile"><br><br>
-            Hailee Earl, Co-President
-            Class of 2021 <br>
-            Most Recent Work Experience: Greystar <br>
-            Track of Finance: Real Estate</li>
-        <li class="list-group-item">
-            <img src="images/janelle.PNG" alt="" class = "profile"><br><br>
-            Janelle Stevens, Co-President
-            Class of 2021 <br>
-            Most Recent Work Experience: Goldman Sachs <br>
-            Track of Finance: Investing (Credit Risk)</li>
-        <li class="list-group-item">
-            <img src="images/tommy.JPG" alt="" class = "profile"><br><br>
-            Tommy Morgan, Vice President of Treasury
-            Class of 2022 <br>
-            Most Recent Work Experience: Sorenson Capital <br>
-            Track of Finance: Investment Banking</li>
-        <li class="list-group-item">
-            <img src="images/daniel.jpeg" alt="" class = "profile"><br><br>
-            Daniel Tong, Vice President of Communications
-            Class of 2021 <br>
-            Most Recent Work Experience: Goldman Sachs <br>
-            Track of Finance: Corporate Finance</li>
-    </ul>
-    </p>
+        <h1>What is the Finance Society?</h1>
+        <br><br>
+        <img src="images/wallstreet.jpeg" alt=""><br><br>
+        <p>The Finance Society is the flagship, student-led organization for students interested in finance-oriented careers.
 
-    <br>
+            Finance Society is the engine behind the preparation, professional development, and placement for the finance major. Upperclassmen who have completed core classwork and industry internships choose to serve as peer mentors creating a pipeline of experience and information for fellow students. Finance Society is the umbrella organization for many sub-organizations, each with their own leadership. The synergy of the Finance Society creates a supportive student community poised for success. </p>
         </div>
+    <br>
+
 
 
 
