--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="gradient-button gradient-button-3" href="links.html" role="button">Virtual Event</a>
           </p>
         </div>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark container">
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
           <a class="navbar-brand font-light" href="#">THUR · SEPTEMBER 10, 2020</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -43,8 +43,12 @@
                 <a class="nav-link" href="presidency.html">Meet the Presidency</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="about.html">About Finance Society</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="links.html">Virtual Event</a>
               </li>
+
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Tonight's Schedule
@@ -60,11 +64,12 @@
           </div>
         </nav>
 
-        <br><br><br>
+        <br><br>
 
         <div class="container">
             <h1>Good Evening!</h1>
             <br><br>
+            <img src="images/coverphoto.jpeg" alt=""><br><br><br>
             <p>We are extremely excited to have everyone join us tonight for the Finance Society Fall 2020 Opening Social.
             On this site, you will find the virtual event links for tonight's opening social. Each box is embedded with a link to a Zoom meeting room.
         The event will begin at 7:00 P.M. and we'll start on the Main Stage. This is where the Opening Ceremony and Closing Ceremonies will be. Around 7:10 P.M.,
