--- a/links.html
+++ b/links.html
@@ -31,7 +31,7 @@
         </p>
     </div>
 
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark container">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <a class="navbar-brand font-light" href="#">THUR · SEPTEMBER 10, 2020</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -43,6 +43,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="presidency.html">Meet the Presidency</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About Finance Society</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" href="#">Virtual Event</a>
@@ -64,15 +67,17 @@
 
 
 
-    <br><br><br>
-    <h1 class="center">Opening Social · Virtual Event</h1>
+    <br><br>
+    <div class="container">
+
+    <h1>Opening Social · Virtual Event</h1>
     <br><br>
 
-    <h2 class="center">7:00 - 7:10 · Opening Ceremony</h2><br>
+    <h2>7:00 - 7:10 · Opening Ceremony</h2><br>
     <div class="container">
         <a href="https://byu.zoom.us/j/8015028217"><img src="images/Clubs/main.png"</a>
     </div><br><br>
-    <h2 class="center">7:10 - 7:50 · Meet with Goldman Sachs</h2><br>
+    <h2>7:10 - 7:50 · Meet with Goldman Sachs</h2><br>
 
     <div class="container">
         <div class="row">
@@ -106,7 +111,7 @@
     </div>
 
     <br><br>
-    <h2 class="center">7:50 - 8:25 · Meet with Sub-club Presidencies</h2><br>
+    <h2>7:50 - 8:25 · Meet with Sub-club Presidencies</h2><br>
 
     <div class="container">
         <div class="row">
@@ -153,10 +158,13 @@
         </div>
     </div>
     <br><br>
-    <h2 class="center">8:25 - 8:30 · Return to Main Stage for Closing Ceremony and Prize Raffle</h2><br>
+    <h2>8:25 - 8:30 · Return to Main Stage for Closing Ceremony and Prize Raffle</h2><br>
     <div class="container">
-        <a href="https://byu.zoom.us/j/8015028217"><img src="images/Clubs/main.png"</a>
-    </div><br><br>
+        <a href="https://byu.zoom.us/j/8015028217"><img src="images/Clubs/main.png"></a>
+    </div>
+    <br><br>
+    <h2>Thank you for joining us tonight. We hope you have a wonderful evening!</h2>
+        </div>
     <br><br>
 
 
