add new github link

--- a/links.html
+++ b/links.html
@@ -75,7 +75,7 @@
 
     <h2>7:00 - 7:10 · Opening Ceremony</h2><br>
     <div class="container">
-        <a href="https://byu.zoom.us/j/8015028217"><img src="images/Clubs/main.png"</a>
+        <a href="https://byu.zoom.us/j/8015028217"><img src="images/Clubs/main.png"></a>
     </div><br><br>
     <h2>7:10 - 7:50 · Meet with Goldman Sachs</h2><br>
 
@@ -173,7 +173,7 @@
         <br>
         <img class="img-footer" src="images/msb_logo_primary_centered_white.svg" alt="Marriott School Logo">
         <br><br>
-        <p>Copyright 2020 · Daniel Tong · You can find my gitrepo here: <a href="https://github.com/BYU-CS-260-Winter-2020/lab-1-photography-website-danieltong-ii"> Daniel's Gitrepo.</a></p><br>
+        <p>Copyright 2020 · Daniel Tong · You can find my gitrepo here: <a href="https://github.com/danieltong-ii/CS260_lab2.git"> Daniel's Gitrepo.</a></p><br>
     </div>
 </body>
 
