--- a/presidency.html
+++ b/presidency.html
@@ -105,9 +105,9 @@
 
         <div class="footer">
             <br>
-            <img class = "img-footer" src="images/msb_logo_primary_centered_white.svg" alt="Marriott School Logo">
+            <img class="img-footer" src="images/msb_logo_primary_centered_white.svg" alt="Marriott School Logo">
             <br><br>
-            <p>Copyright 2020 · Daniel Tong · You can find my gitrepo here: <a href="https://github.com/BYU-CS-260-Winter-2020/lab-1-photography-website-danieltong-ii"> Daniel's Gitrepo.</a></p><br>
+            <p>Copyright 2020 · Daniel Tong · You can find my gitrepo here: <a href="https://github.com/danieltong-ii/CS260_lab2.git"> Daniel's Gitrepo.</a></p><br>
         </div>
     </body>
 
