--- a/presidency.html
+++ b/presidency.html
@@ -107,7 +107,7 @@
             <br>
             <img class="img-footer" src="images/msb_logo_primary_centered_white.svg" alt="Marriott School Logo">
             <br><br>
-            <p>Copyright 2020 · Daniel Tong · You can find my gitrepo here: <a href="https://github.com/danieltong-ii/CS260_lab2.git"> Daniel's Gitrepo.</a></p><br>
+            <p class = "small-font">Copyright 2020 · Daniel Tong · You can find my gitrepo here: <a href="https://github.com/danieltong-ii/CS260_lab2.git"> Daniel's Lab 2 Gitrepo.</a></p><br>
         </div>
     </body>
 
