--- a/links.html
+++ b/links.html
@@ -72,7 +72,8 @@
 
     <h1>Opening Social · Virtual Event</h1>
     <br><br>
-
+    <p>Just as a reminder, each box is embedded with a link to a Zoom meeting room.
+The event will begin at 7:00 P.M., and we will start on the Main Stage. If you have questions at any time, return to the Main Stage and one of our vice presidents will be happy to assist you.</p><br>
     <h2>7:00 - 7:10 · Opening Ceremony</h2><br>
     <div class="container">
         <a href="https://byu.zoom.us/j/8015028217"><img src="images/Clubs/main.png"></a>
