--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="presidency.html">Meet the Presidency</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Finance Society</a>
+                <a class="nav-link active" href="#">About Finance Society</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="links.html">Virtual Event</a>
