--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <br><br>
 
         <div class="container">
-            <h1>Good Evening!</h1>
-            <br><br>
+            <br>
             <img src="images/coverphoto.jpeg" alt=""><br><br><br>
+        <h2>Dear Members,</h2>
             <p>We are extremely excited to have everyone join us tonight for the Finance Society Fall 2020 Opening Social.
             On this site, you will find the virtual event links for tonight's opening social. Each box is embedded with a link to a Zoom meeting room.
         The event will begin at 7:00 P.M. and we'll start on the Main Stage. This is where the Opening Ceremony and Closing Ceremonies will be. Around 7:10 P.M.,
